--- a/src/front/styles/index.css
+++ b/src/front/styles/index.css
@@ -7,34 +7,12 @@ body {
   background-color: white;
 }
 
-h2 {
-  font-weight: 900;
-}
-
-.circle {
-  color: #9fcbff;
+h1 {
+  color: white;
+  text-shadow: 0 0 10px white;
 }
 
 /* NavBar */
-a {
-  text-decoration: none;
-  color: #9fcbff;
-}
-
-a:hover {
-  text-decoration: none;
-  color: white;
-}
-
-.nav-link {
-  color: #9fcbff;
-}
-
-.nav-link:hover {
-  text-decoration: none;
-  color: white;
-}
-
 .navbar-custom {
   box-shadow: 0 0.5rem 0.8rem #00000080;
 }
@@ -54,33 +32,28 @@ a:hover {
 }
 
 /* Botones del Header */
-.button-custom {
-  margin: 2.5rem;
-}
-
-input[type="radio"] {
-  display: none;
-}
-
-label {
+.btn-home {
   display: inline-block;
   padding: 10px 20px;
-  margin: 0.2rem;
+  margin: 0.5rem;
   font-size: 16px;
   font-weight: bold;
-  color: #ccc;
-  border: 2px solid #ccc;
-  border-radius: 5px;
+  color: #000;
+  background-color: #ffffff7e;
+  border: 2px solid black;
+  border-radius: 10px;
   cursor: pointer;
+  box-shadow: -10px 0px 13px -7px #fff, 10px 0px 13px -7px #fff, 7px 7px 18px 7px rgba(255, 255, 255, 0);
   transition: background-color 0.3s, border-color 0.3s, color 0.3s,
     box-shadow 0.3s;
 }
 
-label:hover {
-  color: var(--color);
-  border-color: currentColor;
-  box-shadow: 0 0 10px currentColor, 0 0 20px currentColor,
-    0 0 30px currentColor;
+.btn-home:hover {
+  color: #fff;
+  background-color: #0000007e;
+  border: 2px solid white;
+  box-shadow: -10px 0px 20px -7px #fff, 10px 0px 20px -7px #fff, 7px 7px 25px 7px rgba(255, 255, 255, 0);
+  transform: scale(1.0);
 }
 
 /* Nosotros - About Us */
@@ -89,11 +62,20 @@ label:hover {
   top: -56px;
 }
 
+.numbers {
+  color: #198754;
+}
+
+.custom-justify {
+  text-align: justify;
+}
+
 /* Opiniones - Reviews */
 #reviews {
   position: absolute;
   top: -56px;
 }
+
 .custom-reviews {
   /* background: url("https://cdn.pixabay.com/photo/2017/12/27/14/02/friends-3042751_960_720.jpg"); */
   background: url("https://cdn.pixabay.com/photo/2017/09/03/17/26/woman-2711279_960_720.jpg");
@@ -164,18 +146,48 @@ label:hover {
 }
 
 /* *+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+* */
+/* *+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+* */
+/* *+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+* */
+
+/* Formulario de Inicio de Sesión-Registro | Login-SignUp */
+.glowing-register input[type="radio"] {
+  display: none;
+}
+
+.glowing-register label {
+  display: inline-block;
+  padding: 10px 20px;
+  margin: 0.2rem;
+  font-size: 16px;
+  font-weight: bold;
+  color: #ccc;
+  border: 2px solid #ccc;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s, border-color 0.3s, color 0.3s,
+    box-shadow 0.3s;
+}
+
+.glowing-register label:hover,
+.glowing-register:has(input:checked) label {
+  border-color: currentColor;
+  box-shadow: 0 0 10px currentColor, 0 0 20px currentColor,
+    0 0 30px currentColor;
+}
 
 /* LogIn - SignUp */
 .full-height {
   min-height: 100vh;
 }
+
 [type="checkbox"]:checked,
 [type="checkbox"]:not(:checked) {
   position: absolute;
   left: -9999px;
 }
-.checkbox:checked + label,
-.checkbox:not(:checked) + label {
+
+.checkbox:checked+label,
+.checkbox:not(:checked)+label {
   position: relative;
   display: block;
   text-align: center;
@@ -187,8 +199,9 @@ label:hover {
   cursor: pointer;
   background-color: #9fcbff;
 }
-.checkbox:checked + label:before,
-.checkbox:not(:checked) + label:before {
+
+.checkbox:checked+label:before,
+.checkbox:not(:checked)+label:before {
   position: absolute;
   display: block;
   width: 36px;
@@ -206,20 +219,22 @@ label:hover {
   font-size: 24px;
   transition: all 0.5s ease;
 }
-.checkbox:checked + label:before {
+
+.checkbox:checked+label:before {
   transform: translateX(44px) rotate(-270deg);
 }
 
 .card-3d-wrap {
   position: relative;
-  width: 440px;
+  width: 540px;
   max-width: 100%;
-  height: 400px;
+  height: 500px;
   -webkit-transform-style: preserve-3d;
   transform-style: preserve-3d;
   perspective: 800px;
   margin-top: 60px;
 }
+
 .card-3d-wrapper {
   width: 100%;
   height: 100%;
@@ -230,6 +245,7 @@ label:hover {
   transform-style: preserve-3d;
   transition: all 600ms ease-out;
 }
+
 .card-front,
 .card-back {
   width: 100%;
@@ -250,12 +266,15 @@ label:hover {
   -o-backface-visibility: hidden;
   backface-visibility: hidden;
 }
+
 .card-back {
   transform: rotateY(180deg);
 }
-.checkbox:checked ~ .card-3d-wrap .card-3d-wrapper {
+
+.checkbox:checked~.card-3d-wrap .card-3d-wrapper {
   transform: rotateY(180deg);
 }
+
 .center-wrap {
   position: absolute;
   width: 100%;
@@ -273,6 +292,11 @@ label:hover {
   margin: 0;
   padding: 0;
 }
+
+.glowing-register-wrapper.form-group {
+  display: flex;
+}
+
 .form-style {
   padding: 13px 20px;
   padding-left: 55px;
@@ -291,12 +315,14 @@ label:hover {
   transition: all 200ms linear;
   box-shadow: 0 4px 8px 0 rgba(21, 21, 21, 0.2);
 }
+
 .form-style:focus,
 .form-style:active {
   border: none;
   outline: none;
   box-shadow: 0 4px 8px 0 rgba(21, 21, 21, 0.2);
 }
+
 .input-icon {
   position: absolute;
   top: 0;
@@ -316,39 +342,46 @@ label:hover {
   -webkit-transition: all 200ms linear;
   transition: all 200ms linear;
 }
+
 .form-group input::-moz-placeholder {
   color: #c4c3ca;
   opacity: 0.7;
   -webkit-transition: all 200ms linear;
   transition: all 200ms linear;
 }
+
 .form-group input:-moz-placeholder {
   color: #c4c3ca;
   opacity: 0.7;
   -webkit-transition: all 200ms linear;
   transition: all 200ms linear;
 }
+
 .form-group input::-webkit-input-placeholder {
   color: #c4c3ca;
   opacity: 0.7;
   -webkit-transition: all 200ms linear;
   transition: all 200ms linear;
 }
+
 .form-group input:focus:-ms-input-placeholder {
   opacity: 0;
   -webkit-transition: all 200ms linear;
   transition: all 200ms linear;
 }
+
 .form-group input:focus::-moz-placeholder {
   opacity: 0;
   -webkit-transition: all 200ms linear;
   transition: all 200ms linear;
 }
+
 .form-group input:focus:-moz-placeholder {
   opacity: 0;
   -webkit-transition: all 200ms linear;
   transition: all 200ms linear;
 }
+
 .form-group input:focus::-webkit-input-placeholder {
   opacity: 0;
   -webkit-transition: all 200ms linear;
@@ -383,12 +416,14 @@ label:hover {
   color: #302e3f;
   box-shadow: 0 8px 24px 0 rgba(255, 235, 167, 0.2);
 }
+
 .btn:active,
 .btn:focus {
   background-color: #302e3f;
   color: #9fcbff;
   box-shadow: 0 8px 24px 0 rgba(16, 39, 112, 0.2);
 }
+
 .btn:hover {
   background-color: #302e3f;
   color: #9fcbff;
@@ -398,12 +433,15 @@ label:hover {
 .btn-instagram {
   background-color: red;
 }
+
 .btn-mail {
   background-color: blue;
 }
+
 .btn-telf {
   background-color: green;
 }
+
 .btn-github {
   background-color: black;
 }
@@ -411,4 +449,246 @@ label:hover {
 #login-submit {
   position: absolute;
   top: -56px;
+}
+
+/* *+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+* */
+/* *+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+* */
+/* *+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+* */
+
+/* TV */
+.container-tv {
+  position: fixed;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  top: 0;
+  left: 0;
+  background: radial-gradient(black, #2196f366);
+}
+
+.tv {
+  background: #333;
+  width: 70vw;
+  height: 39.375vw;
+  border: 2.5vw solid #000;
+  border-radius: 0.25vw;
+  border-color: #000 #101010 #000 #101010;
+  position: relative;
+  bottom: 2vh;
+  box-shadow: 0 0 5px 0 #000 inset, 5vmin 0vmin 5vmin -3vmin #000, -5vmin 0vmin 5vmin -3vmin #000;
+}
+
+.tv:before {
+  content: "";
+  width: 8vw;
+  height: 6vw;
+  background: #000000;
+  position: absolute;
+  bottom: -5.95vw;
+  left: calc(50% - 2.75vw);
+  border-radius: 0 100%;
+  transform: rotate(-42deg);
+}
+
+.tv:after {
+  content: "";
+  width: 8vw;
+  height: 6vw;
+  background: #000000;
+  position: absolute;
+  bottom: -5.95vw;
+  left: calc(50% - 5.5vw);
+  border-radius: 100% 0;
+  transform: rotate(42deg);
+}
+
+.video {
+  position: relative;
+  padding-bottom: 56.25%;
+  height: 0;
+  overflow: hidden;
+}
+
+.video video {
+  position: absolute;
+  top: 0;
+  left: -45%;
+  width: 240%;
+  height: 100%;
+}
+
+.switchinput {
+  width: 3vw;
+  height: 3vw;
+  border: 0;
+  position: absolute;
+  z-index: 6;
+  bottom: -4.25vw;
+  left: calc(50% - 1.85vw);
+  opacity: 0;
+  cursor: pointer;
+}
+
+.switch {
+  background: #1b1b1b;
+  width: 3vw;
+  height: 3vw;
+  position: absolute;
+  left: calc(50% - 1.5vw);
+  bottom: -4vw;
+  border: 0.35vw solid #4e4e4e;
+  z-index: 5;
+  border-radius: 100%;
+  box-shadow: 0 0 1vw 0px #272727, 0 0 0.5vw 0.1vw #000 inset;
+  box-sizing: border-box;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+input:checked+.switch {
+  background: linear-gradient(to bottom, #151515, #3c3c3c);
+  color: #fff;
+  box-shadow: 0 0 1vw 0 #03a9f480, 0 0 0.15vw 1px #03a9f46e inset, 0 0 0.25vw 0.15vw #000000 inset;
+  border-color: #2196f3;
+}
+
+.switch::before {
+  content: "";
+  position: absolute;
+  width: 1vw;
+  height: 1vw;
+  border: 0.35vw solid #4e4e4e;
+  border-top-color: transparent;
+  border-radius: 100%;
+}
+
+input:checked+.switch:before {
+  border-color: transparent #03a9f4 #03a9f4 #03a9f4;
+}
+
+.switch::after {
+  content: "";
+  position: absolute;
+  width: 0.3vw;
+  height: 0.65vw;
+  bottom: 1.35vw;
+  background: #4e4e4e;
+}
+
+input:checked+.switch:after {
+  background: #03a9f4;
+}
+
+.cover {
+  position: absolute;
+  background: radial-gradient(transparent, transparent, #00000080);
+  width: 100%;
+  height: 100%;
+  top: 0;
+  overflow: hidden;
+  box-shadow: 0 0 1vmin 0 #000 inset;
+}
+
+.cover:before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  box-sizing: border-box;
+  border: 19.65vw solid #0a0a0a;
+  border-left-width: 35.1vw;
+  border-right-width: 35.1vw;
+  animation: turn-off 0.15s ease 0s 1, turned-off 1s ease 0.15s infinite, white-dot 0.35s ease 0.15s 1;
+}
+
+.cover:after {
+  content: "";
+  background: linear-gradient(45deg, #ffffff00 15%, #ffffff0d 35%, #ffffff00, #ffffff05, #ffffff20);
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 100%;
+}
+
+input:checked~.cover:before {
+  animation: turn-on 0.15s ease 0s 1, turned-on 1s ease 0.15s infinite;
+}
+
+@keyframes turn-on {
+  0% {
+    border-width: 19.65vw;
+    border-left-width: 35.1vw;
+    border-right-width: 35.1vw;
+  }
+
+  50% {
+    border-width: 19.65vw;
+    border-left-width: 10vw;
+    border-right-width: 10vw;
+  }
+
+  100% {
+    border-width: 0vh;
+    border-left-width: 0vw;
+    border-right-width: 0vw;
+  }
+}
+
+@keyframes turned-on {
+  0% {
+    border-width: 0;
+  }
+
+  100% {
+    border-width: 0;
+  }
+}
+
+@keyframes turn-off {
+  0% {
+    border-width: 0vh;
+    border-left-width: 0vw;
+    border-right-width: 0vw;
+  }
+
+  50% {
+    border-width: 19.65vw;
+    border-left-width: 10vw;
+    border-right-width: 10vw;
+  }
+
+  100% {
+    border-width: 19.65vw;
+    border-left-width: 35.1vw;
+    border-right-width: 35.1vw;
+  }
+}
+
+@keyframes turned-off {
+  0% {
+    border-width: 19.65vw;
+    border-left-width: 35.1vw;
+    border-right-width: 35.1vw;
+    background: #111111;
+  }
+
+  100% {
+    border-width: 19.65vw;
+    border-left-width: 35.1vw;
+    border-right-width: 35.1vw;
+    background: #111111;
+  }
+}
+
+@keyframes white-dot {
+  0% {
+    background: #ffffff80;
+  }
+
+  100% {
+    background: #111111;
+  }
 }
