[ADD] Carpetas para cada componente con sus styles & [ADD] Otro form de LogIn

--- a/src/front/styles/index.css
+++ b/src/front/styles/index.css
@@ -1,3 +1,5 @@
+@import url(https://fonts.googleapis.com/css?family=Raleway:400,100,200,300);
+
 * {
   margin: 0;
   padding: 0;
@@ -10,139 +12,6 @@ body {
 h1 {
   color: white;
   text-shadow: 0 0 10px white;
-}
-
-/* NavBar */
-.navbar-custom {
-  box-shadow: 0 0.5rem 0.8rem #00000080;
-}
-
-/* Header - Portada */
-.custom-header {
-  background: url("https://cdn.pixabay.com/photo/2019/10/27/07/31/screen-background-4580904_960_720.jpg");
-  background-repeat: no-repeat;
-  background-position: center top;
-  background-attachment: fixed;
-  background-size: 100%;
-  min-height: 100vh;
-  background-size: cover;
-  background-blend-mode: overlay;
-  background-color: rgba(0, 0, 0, 0.4);
-  color: white;
-}
-
-/* Botones del Header */
-.btn-home {
-  display: inline-block;
-  padding: 10px 20px;
-  margin: 0.5rem;
-  font-size: 16px;
-  font-weight: bold;
-  color: #000;
-  background-color: #ffffff7e;
-  border: 2px solid black;
-  border-radius: 10px;
-  cursor: pointer;
-  box-shadow: -10px 0px 13px -7px #fff, 10px 0px 13px -7px #fff, 7px 7px 18px 7px rgba(255, 255, 255, 0);
-  transition: background-color 0.3s, border-color 0.3s, color 0.3s,
-    box-shadow 0.3s;
-}
-
-.btn-home:hover {
-  color: #fff;
-  background-color: #0000007e;
-  border: 2px solid white;
-  box-shadow: -10px 0px 20px -7px #fff, 10px 0px 20px -7px #fff, 7px 7px 25px 7px rgba(255, 255, 255, 0);
-  transform: scale(1.0);
-}
-
-/* Nosotros - About Us */
-#about-us {
-  position: absolute;
-  top: -56px;
-}
-
-.numbers {
-  color: #198754;
-}
-
-.custom-justify {
-  text-align: justify;
-}
-
-/* Opiniones - Reviews */
-#reviews {
-  position: absolute;
-  top: -56px;
-}
-
-.custom-reviews {
-  /* background: url("https://cdn.pixabay.com/photo/2017/12/27/14/02/friends-3042751_960_720.jpg"); */
-  background: url("https://cdn.pixabay.com/photo/2017/09/03/17/26/woman-2711279_960_720.jpg");
-  background-repeat: no-repeat;
-  background-position: center center;
-  background-attachment: fixed;
-  min-height: 50vh;
-  background-size: cover;
-  color: white;
-}
-
-.stars-reviews {
-  color: #fff71a;
-}
-
-.review {
-  /* box-shadow: 7px 7px 13px white; */
-  border-style: double;
-  border-color: #b13e04;
-  background-color: #000000d7;
-}
-
-/* Servicios - Services */
-#services {
-  position: absolute;
-  top: -56px;
-}
-
-.custom-card {
-  max-width: 23rem;
-}
-
-.testimonial-card .card-up {
-  height: 100px;
-  overflow: hidden;
-  border-top-left-radius: 0.25rem;
-  border-top-right-radius: 0.25rem;
-}
-
-.aqua-gradient {
-  background: linear-gradient(40deg, #2096ff, #05ffa3) !important;
-}
-
-.testimonial-card .avatar {
-  width: 150px;
-  margin-top: -70px;
-  overflow: hidden;
-  border: 5px solid #fff;
-  box-shadow: 10px 10px 10px;
-}
-
-/* Blog */
-.custom-bg-blog {
-  background: url("https://cdn.pixabay.com/photo/2021/10/31/15/22/paws-6757808_960_720.png");
-  background-repeat: no-repeat;
-  background-position: center center;
-  background-attachment: fixed;
-  min-height: 50vh;
-  background-size: cover;
-  background-blend-mode: overlay;
-  background-color: rgba(0, 0, 0, 0.4);
-}
-
-/* Contacto - Contact */
-#contact {
-  position: absolute;
-  top: -56px;
 }
 
 /* *+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+* */
@@ -430,22 +299,6 @@ h1 {
   box-shadow: 0 8px 24px 0 rgba(16, 39, 112, 0.2);
 }
 
-.btn-instagram {
-  background-color: red;
-}
-
-.btn-mail {
-  background-color: blue;
-}
-
-.btn-telf {
-  background-color: green;
-}
-
-.btn-github {
-  background-color: black;
-}
-
 #login-submit {
   position: absolute;
   top: -56px;
@@ -454,241 +307,3 @@ h1 {
 /* *+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+* */
 /* *+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+* */
 /* *+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+* */
-
-/* TV */
-.container-tv {
-  position: fixed;
-  width: 100vw;
-  height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  top: 0;
-  left: 0;
-  background: radial-gradient(black, #2196f366);
-}
-
-.tv {
-  background: #333;
-  width: 70vw;
-  height: 39.375vw;
-  border: 2.5vw solid #000;
-  border-radius: 0.25vw;
-  border-color: #000 #101010 #000 #101010;
-  position: relative;
-  bottom: 2vh;
-  box-shadow: 0 0 5px 0 #000 inset, 5vmin 0vmin 5vmin -3vmin #000, -5vmin 0vmin 5vmin -3vmin #000;
-}
-
-.tv:before {
-  content: "";
-  width: 8vw;
-  height: 6vw;
-  background: #000000;
-  position: absolute;
-  bottom: -5.95vw;
-  left: calc(50% - 2.75vw);
-  border-radius: 0 100%;
-  transform: rotate(-42deg);
-}
-
-.tv:after {
-  content: "";
-  width: 8vw;
-  height: 6vw;
-  background: #000000;
-  position: absolute;
-  bottom: -5.95vw;
-  left: calc(50% - 5.5vw);
-  border-radius: 100% 0;
-  transform: rotate(42deg);
-}
-
-.video {
-  position: relative;
-  padding-bottom: 56.25%;
-  height: 0;
-  overflow: hidden;
-}
-
-.video video {
-  position: absolute;
-  top: 0;
-  left: -45%;
-  width: 240%;
-  height: 100%;
-}
-
-.switchinput {
-  width: 3vw;
-  height: 3vw;
-  border: 0;
-  position: absolute;
-  z-index: 6;
-  bottom: -4.25vw;
-  left: calc(50% - 1.85vw);
-  opacity: 0;
-  cursor: pointer;
-}
-
-.switch {
-  background: #1b1b1b;
-  width: 3vw;
-  height: 3vw;
-  position: absolute;
-  left: calc(50% - 1.5vw);
-  bottom: -4vw;
-  border: 0.35vw solid #4e4e4e;
-  z-index: 5;
-  border-radius: 100%;
-  box-shadow: 0 0 1vw 0px #272727, 0 0 0.5vw 0.1vw #000 inset;
-  box-sizing: border-box;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-input:checked+.switch {
-  background: linear-gradient(to bottom, #151515, #3c3c3c);
-  color: #fff;
-  box-shadow: 0 0 1vw 0 #03a9f480, 0 0 0.15vw 1px #03a9f46e inset, 0 0 0.25vw 0.15vw #000000 inset;
-  border-color: #2196f3;
-}
-
-.switch::before {
-  content: "";
-  position: absolute;
-  width: 1vw;
-  height: 1vw;
-  border: 0.35vw solid #4e4e4e;
-  border-top-color: transparent;
-  border-radius: 100%;
-}
-
-input:checked+.switch:before {
-  border-color: transparent #03a9f4 #03a9f4 #03a9f4;
-}
-
-.switch::after {
-  content: "";
-  position: absolute;
-  width: 0.3vw;
-  height: 0.65vw;
-  bottom: 1.35vw;
-  background: #4e4e4e;
-}
-
-input:checked+.switch:after {
-  background: #03a9f4;
-}
-
-.cover {
-  position: absolute;
-  background: radial-gradient(transparent, transparent, #00000080);
-  width: 100%;
-  height: 100%;
-  top: 0;
-  overflow: hidden;
-  box-shadow: 0 0 1vmin 0 #000 inset;
-}
-
-.cover:before {
-  content: "";
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  box-sizing: border-box;
-  border: 19.65vw solid #0a0a0a;
-  border-left-width: 35.1vw;
-  border-right-width: 35.1vw;
-  animation: turn-off 0.15s ease 0s 1, turned-off 1s ease 0.15s infinite, white-dot 0.35s ease 0.15s 1;
-}
-
-.cover:after {
-  content: "";
-  background: linear-gradient(45deg, #ffffff00 15%, #ffffff0d 35%, #ffffff00, #ffffff05, #ffffff20);
-  position: absolute;
-  top: 0;
-  width: 100%;
-  height: 100%;
-}
-
-input:checked~.cover:before {
-  animation: turn-on 0.15s ease 0s 1, turned-on 1s ease 0.15s infinite;
-}
-
-@keyframes turn-on {
-  0% {
-    border-width: 19.65vw;
-    border-left-width: 35.1vw;
-    border-right-width: 35.1vw;
-  }
-
-  50% {
-    border-width: 19.65vw;
-    border-left-width: 10vw;
-    border-right-width: 10vw;
-  }
-
-  100% {
-    border-width: 0vh;
-    border-left-width: 0vw;
-    border-right-width: 0vw;
-  }
-}
-
-@keyframes turned-on {
-  0% {
-    border-width: 0;
-  }
-
-  100% {
-    border-width: 0;
-  }
-}
-
-@keyframes turn-off {
-  0% {
-    border-width: 0vh;
-    border-left-width: 0vw;
-    border-right-width: 0vw;
-  }
-
-  50% {
-    border-width: 19.65vw;
-    border-left-width: 10vw;
-    border-right-width: 10vw;
-  }
-
-  100% {
-    border-width: 19.65vw;
-    border-left-width: 35.1vw;
-    border-right-width: 35.1vw;
-  }
-}
-
-@keyframes turned-off {
-  0% {
-    border-width: 19.65vw;
-    border-left-width: 35.1vw;
-    border-right-width: 35.1vw;
-    background: #111111;
-  }
-
-  100% {
-    border-width: 19.65vw;
-    border-left-width: 35.1vw;
-    border-right-width: 35.1vw;
-    background: #111111;
-  }
-}
-
-@keyframes white-dot {
-  0% {
-    background: #ffffff80;
-  }
-
-  100% {
-    background: #111111;
-  }
-}
