--- a/src/front/js/component/Reviews/reviews.css
+++ b/src/front/js/component/Reviews/reviews.css
@@ -1,7 +1,7 @@
 /* Opiniones | Reviews - Styles */
 
-.custom-reviews {
-    /* background: url("https://cdn.pixabay.com/photo/2017/12/27/14/02/friends-3042751_960_720.jpg"); */
+/* background: url("https://cdn.pixabay.com/photo/2017/12/27/14/02/friends-3042751_960_720.jpg"); */
+/* .custom-reviews {
     background: url("https://cdn.pixabay.com/photo/2017/09/03/17/26/woman-2711279_960_720.jpg");
     background-repeat: no-repeat;
     background-position: center center;
@@ -9,7 +9,7 @@
     min-height: 50vh;
     background-size: cover;
     color: white;
-}
+} */
 
 .stars-reviews {
     color: #fff71a;
@@ -20,3 +20,14 @@
     border-color: #b13e04;
     background-color: #000000d7;
 }
+
+.carousel {
+    max-width: 46%;
+    margin: auto;
+}
+
+.carousel-item img {
+    border-radius: 20px;
+    object-fit: cover;
+}
+
