--- a/src/front/js/component/SignUpForm/signup-form.css
+++ b/src/front/js/component/SignUpForm/signup-form.css
@@ -7,7 +7,7 @@
 .glowing-register label {
   display: flex;
   padding: 1rem;
-  font-size: 16px;
+  /* font-size: 16px; */
   font-weight: bold;
   align-items: center;
   justify-content: center;
