Cambios del Form - Vistas OK!

--- a/src/front/js/component/Reviews/reviews.css
+++ b/src/front/js/component/Reviews/reviews.css
@@ -21,7 +21,12 @@
     background-color: #000000d7;
 } */
 
-.carousel {
+
+
+
+
+/* CARRUSEL NURIA */
+/* .carousel {
     max-width: 80%;
     margin: auto;
 }
@@ -29,5 +34,4 @@
 .carousel-item img {
     border-radius: 20px;
     object-fit: cover;
-}
-
+} */
