Actualización de los forms

--- a/src/front/js/component/forms/signup-form.css
+++ b/src/front/js/component/forms/signup-form.css
@@ -1,5 +1,10 @@
 /* LogIn Form - Styles */
 
+.custom-form {
+  -webkit-box-shadow: 5px 5px 15px 5px #000000;
+  box-shadow: 5px 5px 15px 5px #000000;
+}
+
 .glowing-register input[type="radio"] {
   display: none;
 }
