Añadiendo varias mejoras 7am

--- a/src/front/js/component/Footer/footer.css
+++ b/src/front/js/component/Footer/footer.css
@@ -1,34 +1,27 @@
 /* Footer Styles */
 
-/* Contacto - Contact */
-.btn-instagram {
-    background-color: red;
-}
-
-.btn-instagram:hover {
-    background-color: rgba(255, 0, 0, 0.777);
-}
-
-.btn-mail {
+.logo-footer:hover {
     background-color: blue;
 }
 
-.btn-mail:hover {
-    background-color: rgba(0, 0, 255, 0.777);
+.section-footer:hover {
+    background-color: blue;
 }
 
-.btn-telf {
-    background-color: green;
-}
-
-.btn-telf:hover {
-    background-color: rgba(0, 128, 0, 0.777);
-}
-
-.btn-github {
+.btn-githubs,
+.btn-githubg,
+.btn-githubn {
     background-color: black;
 }
 
-.btn-github:hover {
-    background-color: rgba(0, 0, 0, 0.777);
+.btn-githubs:hover {
+    background-color: #a06b65;
+}
+
+.btn-githubg:hover {
+    background-color: #7b92aa;
+}
+
+.btn-githubn:hover {
+    background-color: #d2b653;
 }
