--- a/src/front/styles/index.css
+++ b/src/front/styles/index.css
@@ -1,4 +1,5 @@
-/* @import url(https://fonts.googleapis.com/css?family=Raleway:400,100,200,300); */
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+/* @import url("https://fonts.googleapis.com/css?family=Montserrat"); */
 
 * {
   margin: 0;
@@ -7,6 +8,7 @@
 
 body {
   background-color: white;
+  font-family: 'Roboto', sans-serif;
 }
 
 h1 {
