--- a/src/front/js/pages/ProfileUser/user-profile.css
+++ b/src/front/js/pages/ProfileUser/user-profile.css
@@ -70,6 +70,20 @@
   background-position: center;
 }
 
+.avatar-dog {
+  z-index: 1;
+  position: relative;
+  margin: auto;
+  margin-top: -80px;
+  width: 15rem;
+  height: 15rem;
+  border-radius: 100%;
+  border: 4px solid rgba(255, 255, 255, 1);
+  background: url("https://cdn.pixabay.com/photo/2019/11/18/00/38/dog-4633734_960_720.jpg");
+  background-size: cover;
+  background-position: center;
+}
+
 .tituloperfil h1 {
   color: black;
   text-align: center;
