--- a/src/front/js/pages/ProfileUser/user-profile.css
+++ b/src/front/js/pages/ProfileUser/user-profile.css
@@ -1,6 +1,6 @@
 /* Perfil de Usuario | User Profile - Styles */
 
-.header {
+.user-profile .header {
   position: relative;
   width: 100%;
   height: 18rem;
@@ -11,7 +11,7 @@
   background-size: cover;
 }
 
-.header button {
+.user-profile .header button {
   position: relative;
   float: right;
   width: 3rem;
@@ -25,7 +25,7 @@
   box-shadow: 0 0 2px rgba(0, 0, 0, .12), 0 2px 2px rgba(0, 0, 0, .2);
 }
 
-.header button:hover {
+.user-profile .header button:hover {
   width: 180px;
   height: 50px;
   margin-right: 15px;
@@ -36,27 +36,27 @@
   transition: 0.2s;
 }
 
-.header button i {
+.user-profile .header button i {
   color: white;
 }
 
-.header button:hover i {
+.user-profile .header button:hover i {
   display: none;
   transition: 1s;
 }
 
-.header button .text {
+.user-profile .header button .text {
   display: none;
   font-weight: 600;
   transition: 1s;
 }
 
-.header button:hover .text {
+.user-profile .header button:hover .text {
   display: inline-block;
   transition: 1s;
 }
 
-.avatar-user {
+.user-profile .avatar-user {
   z-index: 1;
   position: relative;
   margin: auto;
@@ -70,7 +70,7 @@
   background-position: center;
 }
 
-.avatar-dog {
+.user-profile .avatar-dog {
   z-index: 1;
   position: relative;
   margin: auto;
@@ -84,13 +84,13 @@
   background-position: center;
 }
 
-.tituloperfil h1 {
+.user-profile .tituloperfil h1 {
   color: black;
   text-align: center;
   margin-top: 1rem;
 }
 
-.tituloperfil p {
+.user-profile .tituloperfil p {
   text-align: center;
   text-transform: uppercase;
   color: black;
