--- a/src/front/js/_SIN USAR/component/profileUserStyles.css
+++ b/src/front/js/_SIN USAR/component/profileUserStyles.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css?family=Montserrat");
+/* @import url("https://fonts.googleapis.com/css?family=Montserrat");
 
 * {
   box-sizing: border-box;
@@ -14,10 +14,10 @@
   margin: 0;
 }
 
-/* p {
+p {
   font-size: 14px;
   line-height: 21px;
-} */
+}
 
 .card-container {
   background-color: white;
@@ -97,4 +97,4 @@ button.primary {
 
 .button {
   margin-top: 100px;
-}
+} */
