--- a/src/front/js/pages/Notifications/notifications.css
+++ b/src/front/js/pages/Notifications/notifications.css
@@ -1,9 +1,9 @@
 /* Notificaciones | Notifications - Styles */
 
-.custom-notif-card {
+.custom-notifications .custom-notif-card {
     min-height: 120px;
 }
 
-.card-body {
+.custom-notifications .card-body {
     width: 300px;
 }
