--- a/src/front/js/pages/UserProfile/user-profile.css
+++ b/src/front/js/pages/UserProfile/user-profile.css
@@ -96,6 +96,6 @@
   color: black;
 }
 
-.user-profile .custom-tabs {
-  box-shadow: 7px 7px 7px black;
+.user-profile .boxshadow {
+  box-shadow: 5px 5px 5px black;
 }
