[FIX] base de datos y tablas, y perfil de usuario con tarjetas para tus perros

--- a/src/front/js/pages/UserProfile/user-profile.css
+++ b/src/front/js/pages/UserProfile/user-profile.css
@@ -99,3 +99,19 @@
 .user-profile .boxshadow {
   box-shadow: 5px 5px 5px black;
 }
+
+
+/* Ajustes de las tarjetas de los perros */
+
+.dogCardInformation{
+  width: 300px;
+  height: 300px;
+}
+
+.dogCardInformation img{
+  opacity: 0.2;
+}
+
+.dogCardInformation .card-img-overlay{
+  align-items: center;
+}
