--- a/src/front/styles/index.css
+++ b/src/front/styles/index.css
@@ -13,7 +13,7 @@ body {
 
 h1 {
   color: white;
-  text-shadow: 0 0 10px white;
+  text-shadow: 0 5px 10px white;
 }
 
 /* *+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+* */
