Actualizando varios archivos del front & Añadiendo vista de Reservas

--- a/src/front/js/component/Footer/footer.css
+++ b/src/front/js/component/Footer/footer.css
@@ -1,11 +1,11 @@
 /* Footer Styles */
 
 .logo-footer:hover {
-    background-color: #3498db;
+    background-color: #7a472f;
 }
 
 .section-footer:hover {
-    background-color: #3498db;
+    background-color: #7a472f;
 }
 
 .btn-githubs,
