--- a/src/front/js/component/LogInForm/login-form.css
+++ b/src/front/js/component/LogInForm/login-form.css
@@ -25,7 +25,7 @@
 }
 
 .custom-login .blue {
-  background-color: #3498db;
+  background-color: #7a472f;
   border-bottom: 5px solid #2980B9;
   text-shadow: 0px -2px #2980B9;
 }
