--- a/src/front/js/_SIN USAR/component/Profile/profile.css
+++ b/src/front/js/_SIN USAR/component/Profile/profile.css
@@ -28,7 +28,7 @@
 }
 
 .profile .blue {
-    background-color: #3498db;
+    background-color: #7a472f;
     border-bottom: 5px solid #2980B9;
     text-shadow: 0px -2px #2980B9;
 }
