--- a/src/front/js/pages/Reserves/reserves.css
+++ b/src/front/js/pages/Reserves/reserves.css
@@ -1,16 +1,198 @@
 /* Reservas | Reserves - Styles */
 
 .reserves .header {
-    position: relative;
-    width: 100%;
-    height: 18rem;
-    border-bottom: 3px solid #fff;
-    background-color: black;
-    background-position: center;
-    background-image: url("https://cdn.pixabay.com/photo/2014/04/04/14/55/dog-313357_960_720.jpg");
-    background-size: cover;
-  }
+  position: relative;
+  width: 100%;
+  height: 10rem;
+  border-bottom: 3px solid #fff;
+  background-color: black;
+  background-position: center;
+  background-image: url("https://cdn.pixabay.com/photo/2014/04/04/14/55/dog-313357_960_720.jpg");
+  background-size: cover;
+}
 
-  .reserves .boxshadow {
-    box-shadow: 5px 5px 5px black;
+.reserves .boxshadow {
+  box-shadow: 5px 5px 5px black;
+}
+
+.card-reserves {
+  max-width: 540px;
+}
+
+/* **************************** */
+/* Probando otra card */
+/* **************************** */
+.wrapper {
+  min-height: 100%;
+  display: flex;
+  padding: 50px 15px;
+}
+
+@media screen and (max-width: 700px),
+(max-height: 500px) {
+  .wrapper {
+    flex-wrap: wrap;
+    flex-direction: column;
   }
+}
+
+.card-form {
+  max-width: 570px;
+  margin: auto;
+  width: 100%;
+}
+
+.card-form:hover {
+  filter: drop-shadow(0px);
+  transform: scale(1.1);
+  opacity: 1;
+}
+
+@media screen and (max-width: 576px) {
+  .card-form {
+    margin: 0 auto;
+  }
+}
+
+.card-form__inner {
+  background: #fff;
+  box-shadow: 0 30px 60px 0 rgba(90, 116, 148, 0.4);
+  border-radius: 10px;
+  padding: 35px;
+  padding-top: 180px;
+}
+
+@media screen and (max-width: 480px) {
+  .card-form__inner {
+    padding: 25px;
+    padding-top: 165px;
+  }
+}
+
+@media screen and (max-width: 360px) {
+  .card-form__inner {
+    padding: 15px;
+    padding-top: 165px;
+  }
+}
+
+.card-form__group {
+  display: flex;
+  align-items: flex-start;
+  flex-wrap: wrap;
+}
+
+.card-form__group .card-input__input {
+  flex: 1;
+  margin-right: 15px;
+}
+
+.card-form__group .card-input__input:last-child {
+  margin-right: 0;
+}
+
+@media screen and (max-width: 480px) {
+  .card-form__button {
+    margin-top: 10px;
+  }
+}
+
+.card-item {
+  max-width: 430px;
+  height: 270px;
+  margin-left: auto;
+  margin-right: auto;
+  position: relative;
+  z-index: 2;
+  width: 100%;
+}
+
+@media screen and (max-width: 480px) {
+  .card-item {
+    max-width: 310px;
+    height: 220px;
+    width: 90%;
+  }
+}
+
+@media screen and (max-width: 360px) {
+  .card-item {
+    height: 180px;
+  }
+}
+
+.card-item.-active .card-item__side.-front {
+  transform: perspective(1000px) rotateY(180deg) rotateX(0deg) rotateZ(0deg);
+}
+
+.card-item.-active .card-item__side.-back {
+  transform: perspective(1000px) rotateY(0) rotateX(0deg) rotateZ(0deg);
+}
+
+.card-item__side {
+  border-radius: 15px;
+  overflow: hidden;
+  box-shadow: 0 20px 60px 0 rgba(14, 42, 90, 0.55);
+  transform: perspective(2000px) rotateY(0deg) rotateX(0deg) rotate(0deg);
+  transform-style: preserve-3d;
+  transition: all 0.8s cubic-bezier(0.71, 0.03, 0.56, 0.85);
+  backface-visibility: hidden;
+  height: 100%;
+}
+
+.card-item__side.-back {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  transform: perspective(2000px) rotateY(-180deg) rotateX(0deg) rotate(0deg);
+  z-index: 2;
+  padding: 0;
+  height: 100%;
+}
+
+.card-item__side.-back .card-item__cover {
+  transform: rotateY(-180deg);
+}
+
+.card-item__bg {
+  max-width: 100%;
+  display: block;
+  max-height: 100%;
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+}
+
+.card-item__cover {
+  height: 100%;
+  background-color: #1c1d27;
+  position: absolute;
+  height: 100%;
+  background-color: #1c1d27;
+  left: 0;
+  top: 0;
+  width: 100%;
+  border-radius: 15px;
+  overflow: hidden;
+}
+
+.card-item__cover:after {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(6, 2, 29, 0.45);
+}
+
+.card-list {
+  margin-bottom: -130px;
+}
+
+@media screen and (max-width: 480px) {
+  .card-list {
+    margin-bottom: -120px;
+  }
+}
