--- a/src/front/js/pages/UserProfile/user-profile.css
+++ b/src/front/js/pages/UserProfile/user-profile.css
@@ -20,7 +20,7 @@
   height: 15rem;
   border-radius: 100%;
   border: 4px solid rgba(255, 255, 255, 1);
-  background: url("https://avatars.githubusercontent.com/u/116319632?v=4");
+  background: url("https://cdn.pixabay.com/photo/2021/01/19/10/17/man-5930748_960_720.jpg");
   background-size: cover;
   background-position: center;
 }
@@ -61,9 +61,12 @@
   height: 300px;
 }
 
-.dog-card-information h5,
-p {
-  color: #3498db;
+.dog-card-information h5 {
+  color: #7a472f;
+}
+
+.dog-card-information p {
+  color: #7a472f;
 }
 
 .dog-card-information img {
