--- a/src/front/styles/index.css
+++ b/src/front/styles/index.css
@@ -30,9 +30,9 @@ h1 {
 }
 
 .blue {
-  background-color: #3498db;
-  border-bottom: 5px solid #2980B9;
-  text-shadow: 0px -2px #2980B9;
+  background-color: #7a472f;
+  border-bottom: 5px solid #000;
+  text-shadow: 0px 1px #000;
 }
 
 .red {
