[ADD] arreglando funciones fetch del front

--- a/src/front/js/pages/UserProfile/user-profile.css
+++ b/src/front/js/pages/UserProfile/user-profile.css
@@ -76,3 +76,10 @@
 .dog-card-information .card-img-overlay {
   align-items: center;
 }
+
+.boton-registro-perro{
+  display: flex;
+  justify-content: center;
+  width: 50%;
+  background-color: blue;
+}
