--- a/src/front/styles/index.css
+++ b/src/front/styles/index.css
@@ -1,6 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 /* @import url("https://fonts.googleapis.com/css?family=Montserrat"); */
 
+/* COLOR PRINCIPAL DE LA WEB #7a472f; */
+
 * {
   margin: 0;
   padding: 0;
