--- a/src/front/js/pages/Reserves/reserves.css
+++ b/src/front/js/pages/Reserves/reserves.css
@@ -42,11 +42,11 @@
   width: 100%;
 }
 
-.card-form:hover {
+/* .card-form:hover {
   filter: drop-shadow(0px);
   transform: scale(1.1);
   opacity: 1;
-}
+} */
 
 @media screen and (max-width: 576px) {
   .card-form {
@@ -58,8 +58,8 @@
   background: #fff;
   box-shadow: 0 30px 60px 0 rgba(90, 116, 148, 0.4);
   border-radius: 10px;
-  padding: 35px;
-  padding-top: 180px;
+  padding: 20px;
+  padding-top: 140px;
 }
 
 @media screen and (max-width: 480px) {
@@ -179,12 +179,12 @@
 
 .card-item__cover:after {
   content: "";
-  position: absolute;
+  position: relative;
   left: 0;
   top: 0;
   width: 100%;
   height: 100%;
-  background: rgba(6, 2, 29, 0.45);
+  /* background: rgba(6, 2, 29, 0.3); */
 }
 
 .card-list {
