Act Reserves & Header & Scroll

--- a/src/front/js/component/Contact/contact.css
+++ b/src/front/js/component/Contact/contact.css
@@ -1,12 +1,12 @@
 /* Contacto | Contact - Styles */
 
 #contact {
-    background: #7a472f1c;
+    background: #3f51b51c;
     padding: 2rem;
 }
 
 #contact h3 {
-    color: #7a472f;
+    color: #3f51b5;
     display: block;
     font-size: 30px;
     font-weight: 400;
