--- a/src/front/js/component/Footer/footer.css
+++ b/src/front/js/component/Footer/footer.css
@@ -1,11 +1,11 @@
 /* Footer Styles */
 
 .logo-footer:hover {
-    background-color: #7a472f;
+    background-color: #3f51b5;
 }
 
 .section-footer:hover {
-    background-color: #7a472f;
+    background-color: #3f51b5;
 }
 
 .btn-githubs,
