--- a/src/front/styles/index.css
+++ b/src/front/styles/index.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 /* @import url("https://fonts.googleapis.com/css?family=Montserrat"); */
 
-/* COLOR PRINCIPAL DE LA WEB #7a472f; */
+/* COLOR PRINCIPAL DE LA WEB #3f51b5; */
 
 * {
   margin: 0;
@@ -32,7 +32,7 @@ h1 {
 }
 
 .blue {
-  background-color: #7a472f;
+  background-color: #3f51b5;
   border-bottom: 5px solid #000;
   text-shadow: 0px 1px #000;
 }
@@ -50,5 +50,30 @@ h1 {
 }
 
 /* *+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+* */
+/* STICKY BOTÓN DE IR ARRIBA - SCROLL */
 /* *+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+* */
-/* *+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+*+* */
+
+.go-up {
+  /* display:none; */
+	padding:20px;
+	background:#024959;
+	font-size:20px;
+	color:#fff;
+	cursor:pointer;
+	position: fixed;
+	bottom:20px;
+	right:20px;
+}
+.simplescrollup__button {
+  position: fixed;
+  bottom: 0.5rem;
+  right: 8rem;
+  transition: 1s all;
+  z-index: 10000;
+}
+.simplescrollup__button--show {
+  transform: translateX(0);
+}
+.simplescrollup__button--hide {
+  transform: translateX(100px);
+}
