--- a/src/front/styles/index.css
+++ b/src/front/styles/index.css
@@ -43,6 +43,12 @@ h1 {
   text-shadow: 0px -2px #c0392b;
 }
 
+.yellow {
+  background-color: #ffc107;
+  border-bottom: 5px solid #000;
+  text-shadow: 0px -2px #ffc107;
+}
+
 .action-button:active {
   transform: translate(0px, 5px);
   -webkit-transform: translate(0px, 5px);
