Actualizando archivo tmp/ de la BD y mejoras en HIRE

--- a/src/front/js/pages/Hire/HireStyles.css
+++ b/src/front/js/pages/Hire/HireStyles.css
@@ -42,3 +42,9 @@
 .hire .action-button:hover {
     color: white;
 }
+
+.hire .glowing-register input[type="checkbox"],
+.dog-mtn input[type="checkbox"],
+.dog-size input[type="checkbox"] {
+  display: none;
+}
