--- a/src/front/js/pages/UserProfile/UserProfileStyles.css
+++ b/src/front/js/pages/UserProfile/UserProfileStyles.css
@@ -20,7 +20,7 @@
   height: 15rem;
   border-radius: 100%;
   border: 4px solid rgba(255, 255, 255, 1);
-  background: url("https://cdn.pixabay.com/photo/2021/01/19/10/17/man-5930748_960_720.jpg");
+  /* background: url("https://cdn.pixabay.com/photo/2021/01/19/10/17/man-5930748_960_720.jpg"); */
   background-size: cover;
   background-position: center;
 }
@@ -34,7 +34,7 @@
   height: 15rem;
   border-radius: 100%;
   border: 4px solid rgba(255, 255, 255, 1);
-  background: url("https://cdn.pixabay.com/photo/2019/11/18/00/38/dog-4633734_960_720.jpg");
+  /* background: url("https://cdn.pixabay.com/photo/2019/11/18/00/38/dog-4633734_960_720.jpg"); */
   background-size: cover;
   background-position: center;
 }
