--- a/src/front/js/pages/UserProfile/UserProfileStyles.css
+++ b/src/front/js/pages/UserProfile/UserProfileStyles.css
@@ -61,7 +61,8 @@
   height: 300px;
 }
 
-.dog-card-information h5, .dog-card-information p {
+.dog-card-information h5,
+.dog-card-information p {
   color: #3f51b5;
 }
 
@@ -73,8 +74,15 @@
   align-items: center;
 }
 
-.imagen-tarjeta-perrito-user{
+.imagen-tarjeta-perrito-user {
   width: 60%;
   height: 70%;
   margin: auto;
+}
+
+.custom-icon {
+  /* width: 5rem; */
+  height: 5rem;
+  border-radius: 30%;
+  padding: 10px;
 }
