--- a/src/front/styles/index.css
+++ b/src/front/styles/index.css
@@ -100,7 +100,7 @@ h1 {
   content: attr(data-notifications);
   background: #3f51b5;
   border-radius: 50px;
-  display: inline-block;
+  /* display: inline-block; */
   padding: 0.3em;
   margin: 0.3em;
   color: #f2f2f2;
