[FIX] Vistas Reservas y Cuidadores, reservas desde el front funcionando, alguna mejora visual

--- a/src/front/js/pages/Reserves/ReservesStyles.css
+++ b/src/front/js/pages/Reserves/ReservesStyles.css
@@ -196,3 +196,12 @@
     margin-bottom: -120px;
   }
 }
+
+
+/* IMAGEN DE LOS PERRITOS EN LAS VISTAS DETALLADAS */
+
+.imagen-perrito-informacion-reserva {
+  width: 450px;
+  height: 450px;
+  /* loading: lazy; ???? */
+}
